<resources>
    <string name="app_name">Together</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit profile</string>
    <string name="search">Search</string>
    <string name="add_event">New event</string>
    <string name="category_prompt">Category</string>
    <string name="description_hint">Description here</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_or_login">Register or login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_results">Results</string>
    <string name="title_activity_add_event">New event</string>
    <string name="event_name">Name: </string>
    <string name="event_category">Category: </string>
    <string name="event_description">Description: </string>
    <string name="event_country">Country: </string>
    <string name="event_city">City: </string>
    <string name="event_street">Street: </string>
    <string name="event_user">Hosting user: </string>
    <string name="event_add_button">Add!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="profile_city">From</string>
    <string name="note">User score</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="register_button">Register</string>
    <string name="search_button">Search!</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_button">Edit!</string>
    <string name="user_description">Description</string>
    <string name="user_description_hint">Write something about you :)</string>
    <string name="take_part_in_event_button">Take part!</string>
    <string name="offline_mode">Offline mode</string>
    <string name="signed">You signed to this event!</string>
    <string name="notification_title">Check out newest events in your city!</string>
    <string name="notification_text">Create new and join existing events!</string>
    <string name="title_activity_users_profile">UsersProfileActivity</string>
    <string name="rate">rate</string>
    <string name="gps_off">GPS disabled</string>
    <string name="radio_location">Use my current location</string>
    <string name="radio_text">Type in city</string>
    <string name="event_userSigned">You are already signed to this event!</string>
    <string name="search_events">Search for events:</string>
    <string name="search_users">Search for users:</string>
    <string name="search_user_loginTextView">Login</string>
    <string name="search_user_error">Such a user doesn\'t exist, try again!</string>
    <string name="personal_information">Personal information:</string>
    <string name="users_profile_city">City: </string>
    <string name="users_profile_note">Rating: </string>
    <string name="have_account">Already have an account? Login! </string>
    <string name="dont_have_account">No account yet? Register! </string>
    <string name="or">or </string>
    <string name="show_on_map">Show on map </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_test">test</string>
    <string name="gps_message">You need a location enabled to perform this action. Please turn on location in Settings.</string>
    <string name="gps_error_title">Unable to localize</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="net_message">You need a network connection to perform this action. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="net_error_title">Unable to connect</string>
    <string name="information">information</string>
    <string name="participants">participants</string>
    <string name="fill_all_fields">Fill all the fields!</string>


</resources>
