<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dagna.together.SearchActivity"
    tools:showIn="@layout/activity_search"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_events"
        android:text="@string/search_events"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_event_cityTextView"
        android:text="@string/event_city"
        android:layout_below="@+id/search_events"/>

    <RadioGroup
        android:id="@+id/radioCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_event_cityTextView">

        <RadioButton
            android:id="@+id/radioLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_location"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_text" />

    </RadioGroup>

    <EditText
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_event_city"
        android:enabled="false"
        android:editable="false"
        android:layout_below="@+id/radioCity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_event_categoryTextView"
        android:text="@string/event_category"
        android:layout_below="@id/search_event_city"/>
    <Spinner
        android:id="@+id/search_event_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/category_prompt"
        android:layout_below="@id/search_event_categoryTextView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="search"
        android:id="@+id/search_searchButton"
        android:text="@string/search_button"
        android:layout_below="@id/search_event_category" />

    <!--horizontal line here -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:background="#3F51B5"
        android:layout_below="@id/search_searchButton"
        android:id="@+id/line"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_users"
        android:text="@string/search_users"
        android:layout_below="@+id/line"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_user_loginTextView"
        android:text="@string/search_user_loginTextView"
        android:layout_below="@+id/search_users"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_user_login"
        android:layout_below="@+id/search_user_loginTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="searchUsers"
        android:id="@+id/search_searchButton2"
        android:text="@string/search_button"
        android:layout_below="@id/search_user_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_user_error"
        android:text="@string/search_user_error"
        android:textColor="#ff0000"
        android:visibility="gone"
        android:layout_below="@+id/search_searchButton2"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
