<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/main_image"
        android:id="@+id/main_image"
        android:adjustViewBounds="true"
        android:background="#FFF"
        android:alpha=".5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:paddingTop="80dp"
        android:paddingBottom="20dp"
        android:textColor="#323232"
        android:text="Together"
        android:id="@+id/together"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_image"
        android:id="@+id/loginText"
        android:text="@string/have_account"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"/>

    <Button
        android:text="@string/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:onClick="goToLogin"
        android:layout_below="@+id/loginText"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_centerInParent="true"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:id="@+id/registerText"
        android:text="@string/dont_have_account"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"/>

    <Button
        android:text="@string/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerText"
        android:onClick="goToRegister"
        android:id="@+id/register"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_centerInParent="true"
        android:textColor="#fff"/>



</RelativeLayout>
