<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/main_image"
            android:id="@+id/main_image"
            android:adjustViewBounds="true" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingLeft="30dp"
            android:fontFamily="sans-serif"
            android:id="@+id/profile_login"
            android:textSize="40dp"
            android:layout_below="@id/main_image"
            android:background="#303F9F"
            android:textColor="#fff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_rate"
            android:text="@string/rate"
            android:textSize="20dp"
            android:layout_below="@+id/profile_login"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:background="#3F51B5"
            android:textColor="#fff"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_note"
            android:textColor="#fff"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:background="#3F51B5"
            android:layout_below="@+id/profile_login"
            android:layout_toRightOf="@+id/profile_rate"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information"
            android:text="@string/personal_information"
            android:textSize="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="16dp"
            android:layout_below="@id/profile_rate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_city"
            android:text="@string/users_profile_city"
            android:paddingLeft="16dp"
            android:layout_below="@id/personal_information"/>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>