<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/main_image"
        android:id="@+id/main_image"
        android:adjustViewBounds="true"
        android:alpha=".5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100dp"
        android:gravity="center"

        android:fontFamily="sans-serif-condensed"
        android:paddingTop="80dp"
        android:paddingBottom="20dp"

        android:text="Together"

        android:id="@+id/together"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_loginTextView"
        android:layout_below="@+id/main_image"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_login"
        android:layout_below="@+id/login_loginTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/login_login"
        android:id="@+id/login_passwordTextView"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_passwordTextView"
        android:inputType = "textPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:id="@+id/login_loginButton"
        android:layout_below="@id/login_password"
        android:text="@string/login_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/login_error"
        android:layout_below="@+id/login_password"
        android:textColor="#ff0000"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="abcsddddddddddddddddddddddddddddddddddddddddddddddd"
        android:layout_toLeftOf="@+id/login_loginButton"
        android:layout_marginTop="12dp"
        android:visibility="gone"/>
</RelativeLayout>
